--- a/conteudo/css/style.css
+++ b/conteudo/css/style.css
@@ -1,18 +1,27 @@
+/* Navegação */
 *{
   box-sizing: border-box;
 }
 body{
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
-  
+}
+h1,
+ul,
+p{
+  margin: 0px;
 }
 ul{
-  margin: 0px;
   padding: 0px;
   list-style: none;
 }
 a{
   text-decoration: none;
+  color: inherit;
+}
+img{
+  max-width: 100%;
+  display: block;
 }
 .header-bg{
   background-color: #000000;
@@ -32,7 +41,6 @@ a{
   display: flex;
   flex-wrap: wrap;
   gap: 40px;
-
 }
 .header-menu a{
   padding: 16px 0px;
@@ -79,4 +87,29 @@ a{
     padding: 8px 12px;
     font-size: 14px;
   }
+}
+/* Introdução */
+.introducao-bg{
+  background: #000000;
+  color: #ffffff;
+}
+.introducao{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0px 40px;
+}
+.introducao-conteudo{
+  align-self: end;
+  padding-bottom: 80px;
+}
+.introducao h1{
+  margin-bottom: 32px;
+  font-size: 64px;
+  line-height: 1.125;
+}
+.introducao p{
+  margin-bottom: 20px;
+  font-size: 24px;
+  line-height: 1.5;
+  color: #b2b2b2;
 }
