--- a/conteudo/css/style.css
+++ b/conteudo/css/style.css
@@ -3,3 +3,5 @@
 @import "./home/introducao.css";
 @import "./utilidades/componentes.css";
 @import "./utilidades/colors.css";
+@import "./global/bicicletas/bicicletas-lista.css";
+@import "./utilidades/home/tecnologia.css";
