--- a/style.css
+++ b/style.css
@@ -41,19 +41,23 @@ a{
   display: inline-block;
   padding: 16px 0px;
   font-size: 18px;
+  position: relative;
 }
 
   .header-menu a::after{
     content: "";
     display: block;
-    width: 100%;
+    width: 0;
     height: 2px;
     background: #ffffff;
     margin-top: 4px;
-  }
+    transition: 0.3s;
+    position: absolute;
+   }
 
   .header-menu a:hover:after{
-
+    width: 100%;
+    
   }
 
 @media(max-width: 800px){
@@ -67,6 +71,9 @@ a{
   }
   .header-menu a:hover{
     background: #2e2e2e;
+  }
+  .header a::after{
+    display: none;
   }
 }
 
