--- a/style.css
+++ b/style.css
@@ -68,8 +68,7 @@ img{
 
   .header-menu a:hover:after{
     width: 100%;
-    
-  }
+}
 
 @media(max-width: 800px){
   .header-menu {
@@ -106,4 +105,49 @@ img{
 .introducao{
   display: grid;
   grid-template-columns: 1fr 1fr;
+  gap: 0px 40px;
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.introducao-conteudo{
+  align-self: end;
+  padding-bottom: 80px;
+}
+
+.introducao h1{
+  margin-bottom: 32px;
+  font-size: 64px;
+  line-height: 1.125;
+}
+
+.introducao h1 span{
+  color: #ffbb00;
+}
+
+.introducao p{
+  margin-bottom: 20px;
+  font-size: 24px;
+  line-height: 1.5;
+  color: #b2b2b2;
+}
+
+.introducao a{
+  display: inline-block;
+  padding: 16px 32px;
+  background: linear-gradient(#ffbf00, #f2a50c );
+  border-radius: 4px;
+  box-shadow: 0 1px 5px 0 #fff;
+  color: #000000;
+  text-transform: uppercase;
+  font-size: 18px;
+  line-height: 1.33;
+  font-weight: bold;
+}
+
+.introducao a:hover{
+  background: linear-gradient(#ffb60d, #e59317);
 }
