--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body{
   margin: 0px;
-  font-family:Arial, Helvetica, sans-serif
+  font-family:Arial, Helvetica, sans-serif;
+  padding-bottom: 600px;
+  /* font-family: 'Poppins', sans-serif; */
+  /* font-family: 'Roboto', sans-serif;     */
 }
 
 h1,
@@ -53,6 +56,8 @@ img{
   padding: 16px 0px;
   font-size: 18px;
   position: relative;
+  font-family: 'poppins';
+  font-weight: 400;
 }
 
   .header-menu a::after{
@@ -100,6 +105,7 @@ img{
 .introducao-bg{
   background: #000000;
   color: #ffffff;
+  box-shadow: inset 0 -120px #ffffff;
 }
 
 .introducao{
@@ -115,13 +121,23 @@ img{
 }
 .introducao-conteudo{
   align-self: end;
-  padding-bottom: 80px;
+  padding-bottom: 200px;
+
 }
+
+.introducao img{
+  height: 100%;
+  object-fit: cover;
+}
+
+
 
 .introducao h1{
   margin-bottom: 32px;
   font-size: 64px;
   line-height: 1.125;
+  font-family: 'poppins';
+  font-weight: 600;
 }
 
 .introducao h1 span{
@@ -133,6 +149,8 @@ img{
   font-size: 24px;
   line-height: 1.5;
   color: #b2b2b2;
+  font-family: 'Roboto';
+  font-weight: 400;
 }
 
 .introducao a{
@@ -145,9 +163,49 @@ img{
   text-transform: uppercase;
   font-size: 18px;
   line-height: 1.33;
-  font-weight: bold;
+  font-family: 'poppins';
+  font-weight: 600;
+
 }
 
 .introducao a:hover{
   background: linear-gradient(#ffb60d, #e59317);
+}
+
+@media(max-width: 600px){
+  .introducao a{
+    padding: 12px 16px;
+    font-size: 16px;
+  }
+}
+@media(max-width: 1200px){
+  .introducao h1{
+    font-size:  48px;
+  }
+  .introducao p{
+    font-size: 18px;
+  }
+}
+
+@media(max-width: 800px){
+  .introducao{
+    grid-template-columns: 1fr;
+    gap: 32px;
+  }
+  .introducao-bg{
+    background: #111111;
+    padding-top: 40px;
+    box-shadow: inset 0 -60px #ffffff;
+  }
+  .introducao h1{
+    font-size:  48px;
+    margin-bottom: 16px;
+  }
+  .introducao-conteudo{
+    padding-bottom: 0;
+  }
+  .introducao img{
+    height: 300px;
+    width: 100%;
+  }
 }
