--- a/global/header.css
+++ b/global/header.css
@@ -1,7 +1,6 @@
 .header-bg{
-  background-color: #000000 ;
+  background-color: var(--cor-12);
 }
-
 .header{
   display: flex;
   flex-wrap: wrap;
@@ -14,15 +13,13 @@
   margin-left: auto;
   margin-right: auto;
 }
-
 .header-menu {
   display: flex;
   flex-wrap: wrap;
   gap: 40px;
 }
-
 .header-menu a{
-  color: #ffffff;
+  color: var(--cor-0);
   display: inline-block;
   padding: 16px 0px;
   font-size: 18px;
@@ -30,33 +27,30 @@
   font-family: 'poppins';
   font-weight: 400;
 }
-
-  .header-menu a::after{
+.header-menu a::after{
     content: "";
     display: block;
     width: 0;
     height: 2px;
-    background: #ffffff;
+    background: var(--cor-0);
     margin-top: 4px;
     transition: 0.3s;
     position: absolute;
    }
-
   .header-menu a:hover:after{
     width: 100%;
 }
-
 @media(max-width: 800px){
   .header-menu {
     gap: 20px;
   }
   .header-menu a {
-    background: #111111;
+    background: var(--cor-11);
     padding: 12px 16px;
     border-radius: 4px;
   }
   .header-menu a:hover{
-    background: #2e2e2e;
+    background-color: var(--cor-10);
   }
   .header a::after{
     display: none;
