--- a/home/introducao.css
+++ b/home/introducao.css
@@ -1,9 +1,8 @@
 .introducao-bg{
-  background: #000000;
-  color: #ffffff;
+  background: var(--cor-12);
+  color: var(--cor-0);
   box-shadow: inset 0 -120px #ffffff;
 }
-
 .introducao{
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -18,35 +17,17 @@
 .introducao-conteudo{
   align-self: end;
   padding-bottom: 200px;
-
 }
-
 .introducao img{
   height: 100%;
   object-fit: cover;
 }
-
-
-
 .introducao h1{
   margin-bottom: 32px;
-  font-size: 64px;
-  line-height: 1.125;
-  font-family: 'poppins';
-  font-weight: 600;
 }
-
-.introducao h1 span{
-  color: #ffbb00;
-}
-
 .introducao p{
-  margin-bottom: 20px;
-  font-size: 24px;
-  line-height: 1.5;
   color: #b2b2b2;
-  font-family: 'Roboto';
-  font-weight: 400;
+  margin-bottom: 20px;
 }
 @media(max-width: 1200px){
   .introducao h1{
@@ -56,7 +37,6 @@
     font-size: 18px;
   }
 }
-
 @media(max-width: 800px){
   .introducao{
     grid-template-columns: 1fr;
