--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-@import "./global/header.css";
 @import "./global/global.css";
+@import "./utilidades/tipografia.css";
+@import "./global/header.css";
 @import "./home/introducao.css";
 @import "./utilidades/componentes.css";
+@import "./utilidades/cores.css";
