--- a/home/introducao.css
+++ b/home/introducao.css
@@ -1,7 +1,7 @@
 .introducao-bg{
   background: var(--cor-12);
   color: var(--cor-0);
-  box-shadow: inset 0 -120px #ffffff;
+  box-shadow: inset 0 -120px var(--cor-0);;
 }
 .introducao{
   display: grid;
@@ -26,29 +26,21 @@
   margin-bottom: 32px;
 }
 .introducao p{
-  color: #b2b2b2;
+  color: var(--cor-5);
   margin-bottom: 20px;
 }
-@media(max-width: 1200px){
-  .introducao h1{
-    font-size:  48px;
-  }
-  .introducao p{
-    font-size: 18px;
-  }
-}
+
 @media(max-width: 800px){
   .introducao{
     grid-template-columns: 1fr;
     gap: 32px;
   }
   .introducao-bg{
-    background: #111111;
+    background: var(--cor-11);
     padding-top: 40px;
-    box-shadow: inset 0 -60px #ffffff;
+    box-shadow: inset 0 -60px var(--cor-0);
   }
   .introducao h1{
-    font-size:  48px;
     margin-bottom: 16px;
   }
   .introducao-conteudo{
