--- a/style.css
+++ b/style.css
@@ -4,3 +4,4 @@
 @import "./home/introducao.css";
 @import "./utilidades/componentes.css";
 @import "./utilidades/cores.css";
+@import "./bike/bicicletas.css";
