--- a/style.css
+++ b/style.css
@@ -5,3 +5,6 @@
 @import "./utilidades/componentes.css";
 @import "./utilidades/cores.css";
 @import "./bike/bicicletas.css";
+@import "./home/tecnologia.css";
+@import "./home/parceiros.css";
+@import "./home/depoimento.css";
