--- a/utilidades/componentes.css
+++ b/utilidades/componentes.css
@@ -26,3 +26,24 @@ margin-right: auto;
     font-size: 16px;
   }
 }
+
+.link{
+  display: inline-block;
+  color: var(--cor-p1);
+  font-size: 1.5rem;
+  font-weight: 500;
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+  }
+
+  .link::after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: currentColor;
+  }
+
+  .link:hover{
+    color: var(--cor-0);
+  }
