--- a/home/depoimento.css
+++ b/home/depoimento.css
@@ -22,4 +22,28 @@
   font-style: italic;
   font-weight: 900;
   margin-bottom: 32px;
+  position: relative;
+}
+
+.depoimento p::before,
+.depoimento p::after{
+  font-size: 5rem;
+  color: var(--cor-p2);
+  position: absolute;
+}
+
+.depoimento p::before{
+  content: '“';
+  left: -50px;
+  top: -20px;
+}
+
+.depoimento p::after{
+  content: '”';
+}
+
+@media(max-width: 800px){
+  .depoimento{
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
