--- a/home/depoimento.css
+++ b/home/depoimento.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   background-color: var(--cor-p1);
+  overflow: hidden;
 }
 
 .depoimento img{
@@ -45,5 +46,13 @@
 @media(max-width: 800px){
   .depoimento{
     grid-template-columns: repeat(1, 1fr);
+    text-align: center;
+  }
+  .depoimento-conteudo {
+    padding: 40px 20px;
+    justify-self: center;
+  }
+  .depoimento img{
+    max-height: 200px;
   }
 }
