--- a/home/parceiros.css
+++ b/home/parceiros.css
@@ -40,6 +40,11 @@
   .parceiros h2{
     margin-bottom: 20px;
   }
+  .parceiros li{
+    display: flex;
+    padding: 20px;
+   
+  }
   .parceiros ul{
     grid-template-columns: repeat(2, 1fr);
   }
