--- a/utilidades/componentes.css
+++ b/utilidades/componentes.css
@@ -16,6 +16,16 @@ margin-right: auto;
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
 }
 
+.botao.secundario{
+  background: var(--cor-10);
+  color: var(--cor-2);
+  box-shadow: none;
+}
+
+.botao.secundario:hover{
+  background: var(--cor-9);
+}
+
 .botao:hover{
   background: linear-gradient(#ffb60d, #e59317);
 }
