--- a/utilidades/componentes.css
+++ b/utilidades/componentes.css
@@ -14,6 +14,7 @@ margin-right: auto;
   color: var(--cor-12);
   text-transform: uppercase;
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
+  max-width: max-content;
 }
 
 .botao.secundario{
