--- a/utilidades/componentes.css
+++ b/utilidades/componentes.css
@@ -58,3 +58,23 @@ margin-right: auto;
   .link:hover{
     color: var(--cor-0);
   }
+
+/*Titulo*/
+
+.titulo-bg{
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: var(--cor-11);
+}
+
+@media screen and (max-width: 800px){
+  .titulo-bg{
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .titulo p{
+    font-size: 1rem;
+    text-transform: lowercase;
+    font-weight: 400;
+  }
+}
