--- a/utilidades/componentes.css
+++ b/utilidades/componentes.css
@@ -1,4 +1,5 @@
-.container { box-sizing: border-box;
+.container { 
+box-sizing: border-box;
 max-width: 1200px;
 padding-left: 20px;
 padding-right: 20px;
@@ -15,6 +16,26 @@ margin-right: auto;
   text-transform: uppercase;
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
   max-width: max-content;
+}
+
+  .botao.seta{
+    display: flex;
+    align-items: center;
+  }
+
+
+.botao.seta::after{
+  content: "";
+  display: inline-block;
+  width: 18px;
+  height: 10px;
+  margin-left: 12px;
+  background: url("../img/icones/seta.svg");
+  transition: transform 0.3s;
+}
+
+.botao.seta:hover::after{
+  transform: translateX(4px);
 }
 
 .botao.secundario{
