--- a/style.css
+++ b/style.css
@@ -12,3 +12,5 @@
 @import "./global/footer.css";
 @import "./termos/termos.css";
 @import "./bike/bicicletasvnd.css";
+@import "./seguros/perguntas.css";
+@import "./seguros/vantagens.css";
