--- a/global/global.css
+++ b/global/global.css
@@ -12,7 +12,8 @@ h3,
 h4,
 ul, 
 p,
-blockquote {
+blockquote,
+dd {
   margin: 0px;
 }
 
@@ -34,3 +35,4 @@ img{
 img[src$=".jpg"]{
   border-radius: 5px;
 }
+
