--- a/style.css
+++ b/style.css
@@ -14,3 +14,4 @@
 @import "./bike/bicicletasvnd.css";
 @import "./seguros/perguntas.css";
 @import "./seguros/vantagens.css";
+@import "./bicicleta/bicicleta.css";
