--- a/style.css
+++ b/style.css
@@ -15,3 +15,4 @@
 @import "./seguros/perguntas.css";
 @import "./seguros/vantagens.css";
 @import "./bicicleta/bicicleta.css";
+@import "./bicicletass/seguros.css";
