--- a/style.css
+++ b/style.css
@@ -16,3 +16,6 @@
 @import "./seguros/vantagens.css";
 @import "./bicicleta/bicicleta.css";
 @import "./bicicletass/seguros.css";
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
+@import "./utilidades/formulário.css";
