--- a/utilidades/componentes.css
+++ b/utilidades/componentes.css
@@ -16,6 +16,8 @@ margin-right: auto;
   text-transform: uppercase;
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
   max-width: max-content;
+  border: none;
+  cursor: pointer;
 }
 
   .botao.seta{
