--- a/style.css
+++ b/style.css
@@ -19,3 +19,4 @@
 @import "./contato/contato.css";
 @import "./contato/lojas.css";
 @import "./utilidades/formulário.css";
+@import "./orcamento/orcamento.css";
